Fixes horizontal scrollbar popping up on edge bounce

--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@
   --black: #060606;
 }
 body {
-  margin: 0;
-  padding: 0;
+  overflow-x: hidden;
+  border: none !important;
   font-family: 'Audiowide', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
